# djangostreetmap

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  admin.py  annotations.py  apps.py  bootstrap.py  models.py  osmimport_models.py  pyproject.toml  pytest.ini  tilegenerator.py  tox.ini  unknown.json  urls.py  views.py
.github/workflows/: ci.yml  python-app.yml  release.yml
djangostreetmap/: __init__.py  admin.py  annotations.py  apps.py  functions.py  json_object.py  json_serializer.py  models.py  osm_update.py  overpass.md  overpass_parse.py  pg_health.json  test_functions.py  test_views.py  tests.py  tilegenerator.py  timer.py  urls.py  views.py  wsgi.py
djangostreetmap/management/commands/: handlers.py  import_land.py  import_overpass.py  import_scripts.py  osm_update.py
djangostreetmap/maplibre/: osm_liberty.py
djangostreetmap/migrations/: 0001_initial.py  0001_squashed_0013_osmboundary.py  0002_delete_osmadminboundary_alter_overpassquery_name_and_more.py  0003_auto_20210906_0359.py  0003_osmnode_osmrelation_osmway_osmrelationmember_and_more.py  0004_osmislands.py  0004_osmrelationmember_role_alter_osmrelationmember_node_and_more.py  0005_osmislandsareas.py  0005_osmrelationmember_relation.py  0006_auto_20211025_2148.py  0006_osmrelationmember_unique_ordinality_rel.py  0007_alter_osmnode_lat_alter_osmnode_lon.py  0007_facebookairoad_osmhighway_bridge_osmhighway_junction_and_more.py  0007_simplifiedlandpolygon_delete_osmadminboundary_and_more.py  0008_osmxmlimport.py  0008_overpassquery_remove_osmhighway_bridge_and_more.py  0009_delete_planetosmline_delete_planetosmpoint_and_more.py  0010_overpassquery_osm_id.py  0011_remove_overpassquery_osm_id_overpassresult_osm_id.py  0012_alter_overpassquery_name.py  0013_osmboundary.py
djangostreetmap/notebooks/: HighwayHandlerExample.ipynb
djangostreetmap/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
djangostreetmap/requirements/: base.txt  conditionals.txt  dev.txt  pipcompileupgrade  pipcompilewrapper  test.in  test.txt
djangostreetmap/scripts/: nodes.sql  relations.sql  tags.sql  trigger.sql
djangostreetmap/stubs/osmium/: __init__.pyi  _osmium.pyi  helper.pyi
djangostreetmap/stubs/osmium/osm/: _osm.pyi
djangostreetmap/stubs/osmium/replication/: _replication.pyi  server.pyi  utils.pyi
djangostreetmap/templates/: leaflet_tile_layers.html  ol_tile_layers.html
docs/: api.md  architecture.md
examples/minimal/: .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
examples/minimal/project/: settings.py  urls.py
management/commands/: handlers.py  import_facebook_gpkg.py  import_highways.py  import_overpass.py
maplibre/: README.md  __init__.py  basemodel.py  color.py  layer.py  light.py  osm_liberty.json  osm_liberty.py  parse_root.py  projection.py  sky.py  sources.py  sprite.py  style_out.json  terrain.py  test_roundtrip.py  tests.py  transition.py
migrations/: 0002_osmhighway.py  0003_auto_20210906_0359.py  0005_osmislandsareas.py  0006_auto_20210908_0214.py  0007_auto_20210908_0314.py
requirements/: base.txt  dev.in  dev.txt  pipcompilewrapper
stubs/osmium/: geom.pyi  index.pyi  io.pyi  version.pyi
stubs/osmium/osm/: __init__.pyi  mutable.pyi
templates/: leaflet_tile_layers.html
tests/: health.xml  models.py  relation.xml  rotunda.xml  test_settings.py  urls.py  views.py
tests/management/commands/: run_test_container.py
