[project]
name = "djangostreetmap"
version = "0.3.1"
description = "Deliver OpenStreetMap data in GeoJSON and MVT tile formats"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Joshua Brooks", email = "josh.vdbroek@gmail.com" }
]
dependencies = [
    "Django>=5.2,<6.0",
    "pydantic>=2,<3",
    "osmflex>=0.3",
]

[project.urls]
Homepage = "https://github.com/catalpainternational/djangostreetmap"
Repository = "https://github.com/catalpainternational/djangostreetmap"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov>=4.1",
    "ruff",
    "mypy",
    "django-stubs>=5.2",
    "types-psycopg2",
    "pre-commit",
    "requests",
    "django-cors-headers",
    "django-extensions",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["djangostreetmap", "maplibre"]

[tool.ruff]
line-length = 180
target-version = "py311"
exclude = ["migrations", ".venv", "env", "env3.8", "typings"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line-length (handled by formatter; long SQL strings are OK)
    "E203",  # whitespace before ':' (not PEP-compliant per Black)
    "UP042", # str+Enum vs StrEnum — pydantic serializes both fine; changing behavior is intrusive
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "W", "I", "UP", "B"]
"**/tests.py" = ["B011"]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
ignore_missing_imports = true
exclude = ["migrations/", "\\.venv/"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false

[tool.django-stubs]
django_settings_module = "tests.test_settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["djangostreetmap", "maplibre"]
omit = [
    "*/migrations/*",
    "*/tests.py",
    "tests/*",
]
